<resources>
    <string name="app_name_release">TWD Inspection App</string>
    <string name="app_name_demo">Demo-TWD</string>
    <string name="app_name_qa">QA-TWD</string>
    <string name="app_name_dev">Dev-TWD</string>
    <string name="font_name_source_opensans">OpenSans</string>
    <string name="districts">districts</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="plz_enter_mob">Please enter your mobile number to \n receive a verification code.</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="con">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="enter_user_name">Username</string>
    <string name="enter_pwd">Password</string>
    <string name="log_in">Log In</string>
    <string name="otp_text">OTP has been sent to you on your registered mobile phone. Please enter it below</string>
    <string name="mpin_text">Please enter your 4 digit mPIN below</string>
    <string name="gen_mpin_text">Set your mPIN by enter 4 digit pin below</string>
    <string name="verify">VERIFY</string>
    <string name="generate">GENERATE</string>
    <string name="proceed">PROCEED</string>
    <string name="verification">VERIFICATION</string>
    <string name="set_mpin">GENERATE MPIN</string>
    <string name="forgot_mpin">Forgot MPIN</string>
    <string name="select_district">Select District</string>
    <string name="select_jurisdiction">Select Jurisdiction</string>
    <string name="select_village">Select Village</string>
    <string name="select_mandal">Select Mandal</string>
    <string name="select_institution">Select Institution</string>
    <string name="submit">SUBMIT</string>
    <string name="staff_att">Staff Attendance</string>
    <string name="hm_present_time">Whether the HM present at the time of inspection</string>
    <string name="hwo_present_time">Whether the HWO/ Deputy warden present at the time of inspection</string>
    <string name="hm_head_quarters">Whether the HM maintaining Head Quarters</string>
    <string name="hwo_head_quarters">Whether the HWO/Deputy warden maintaining headquarters</string>
    <string name="name_of_the_institution">Name of the institution</string>
    <string name="mandal">Mandal</string>
    <string name="yesterday_supervision_duty_allotted">Yesterday supervision duty allotted</string>
    <string name="last_week">Last week turn duties teacher attended</string>
    <string name="present">Present</string>
    <string name="dep">On Deputation</string>
    <string name="absent">Absent</string>
    <string name="fever">Fever</string>
    <string name="cold_amp_cough">Cold &amp; cough</string>
    <string name="headache">Headache</string>
    <string name="diarrhea">Diarrhoea</string>
    <string name="malaria">Malaria</string>
    <string name="others">Others</string>
    <string name="select_date">Select date</string>
    <string name="enter_number">Enter number of suffering students</string>
    <string name="students_on_roll">Students on roll</string>
    <string name="students_on_roll_rep">Students on roll</string>
    <string name="password">Password</string>
    <string name="is_students_attendance_marked">Is students attendance marked?</string>
    <string name="is_students_attendance_marked_rep">Is students attendance marked?</string>
    <string name="students_marked_present_in_register">Students marked present in register</string>
    <string name="students_marked_present_in_register_rep">Students marked present in register</string>
    <string name="students_present_during_inspection">Students present during inspection</string>
    <string name="students_present_during_inspection_rep">Students present during Inspection</string>
    <string name="variance">Variance</string>
    <string name="variance_rep">Variance</string>
    <string name="drinking_water_facility">Whether drinking water facility is available</string>
    <string name="running_water_facility">Whether running water facility is available</string>
    <string name="yes">Yes</string>
    <string name="dr_godown_req">dr_godown</string>
    <string name="dr_depot_req">dr_depot</string>
    <string name="mfp_godown_req">mfp_commodities</string>
    <string name="p_unit_req">processing_unit</string>
    <string name="petrol_req">petrol_pump</string>
    <string name="lpg_req">lpg</string>
    <string name="no">No</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="ro_plant_working">Whether RO plant is working</string>
    <string name="source_of_drinking_water">Capture the source of drinking water</string>
    <string name="open_well">Open well</string>
    <string name="bore_well">Bore well</string>
    <string name="municipal">Municipal / GP Tap</string>
    <string name="hand_pump">Hand pump</string>
    <string name="capture_tds_meter_reading">Capture RO Plant</string>
    <string name="capture_tds_image">Please capture RO Plant image</string>
    <string name="enter_reason">Enter reason</string>
    <string name="how_is_light">How is lighting facility</string>
    <string name="does_this_institute">Does the institute have enough Fans or Wall mounts available for all inmates</string>
    <string name="enough_fans">Does the institute have enough fans or fans available for all inmates</string>
    <string name="ceiling_fans">Details of ceiling fans</string>
    <string name="working">Working</string>
    <string name="non_working">Non working</string>
    <string name="required">Required</string>
    <string name="wall_mounted_fans">Details of wall mounted fans</string>
    <string name="tube_lights">Details of tube lights</string>
    <string name="dining_hall">Dining hall available</string>
    <string name="being_used">Is it being used</string>
    <string name="avail_construction">Place is available for construction</string>
    <string name="add_req_dininghall">Any additional requirements needed</string>
    <string name="how_many_buildings">How many buildings are dilapidated state</string>
    <string name="trans_avail">Transformers available</string>
    <string name="type_of_power">Type of power connection</string>
    <string name="single_phase">Single Phase</string>
    <string name="three_phase">3 Phase</string>
    <string name="is_ind_conn">Is individual connection available for each block</string>
    <string name="source_of_running">Capture the source of running water</string>
    <string name="is_approach">Is approach road required</string>
    <string name="is_compound">Is compound wall required</string>
    <string name="is_compound_gate">Is gate to compound wall required</string>
    <string name="is_path">Is path way required</string>
    <string name="is_sump">Is sump required</string>
    <string name="is_sewerage">Is sewerage connected to drainage system</string>
    <string name="raise_request">Raise request to construct soak pit</string>
    <string name="is_drainage">Is drainage line functioning</string>
    <string name="is_solar">Is solar water heater available</string>
    <string name="add_class">Additional class rooms required?</string>
    <string name="add_dining">Additional dining halls required?</string>
    <string name="add_dorm">Additional dormitories required?</string>
    <string name="number">Enter number</string>
    <string name="repairs_to_toilets">No of toilets</string>
    <string name="repairs_to_door">Whether Door and windows repairs required</string>
    <string name="whether_highest">Whether (Highest class) syllabus completed as per schedule in all subjects?</string>
    <string name="capture_highest">Capture classes performance</string>
    <string name="is_strength">Is the strength accommodated as per infrastructure availability</string>
    <string name="does_staff">Are Teachers available for all subjects</string>
    <string name="is_school">Is school plan for next academic year is prepared</string>
    <string name="does_any_assessment">Does any assessment tests conducted</string>
    <string name="student_acadamic">Students academic performances (Grading) (for 10th class/ highest only) in the above test</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="total">Total</string>
    <string name="are_the">Are the following registers maintained up to date?</string>
    <string name="adm_reg">Admission register</string>
    <string name="att_boa_reg">Boarders Attendance Register</string>
    <string name="boa_sign_reg">Boarders Signature Register</string>
    <string name="boa_mov_reg">Boarders Movement Register</string>
    <string name="daily_pur_reg">Daily Purchase Register</string>
    <string name="cash_book">Cash Book Register</string>
    <string name="daily_menu_reg">Daily Menu Register</string>
    <string name="att_staff_reg">Staff Attendance Register</string>
    <string name="staff_order">Staff office Order Book Register</string>
    <string name="stock_issue">Stock Issue (Food Provision) Register</string>
    <string name="per_article">Permanent Article Register</string>
    <string name="bud_watch">Budget Watch Register</string>
    <string name="acq_reg">Acquaintance Register</string>
    <string name="acq_dress">Acquaintance Dresses, Notebooks, Register</string>
    <string name="acq_cos">Acquaintance Cosmetics Register</string>
    <string name="pay_bill">Pay Bill Register</string>
    <string name="tre_reg">Treasury Bill Register</string>
    <string name="con_bill">Contingent Bill Register</string>
    <string name="ta_bill">TA Bill Register</string>
    <string name="daily_move">Staff/HM Movement Register</string>
    <string name="tea_move">Teacher Movement Register</string>
    <string name="cl_acc">CL Account Register</string>
    <string name="par_meet">Parents Meeting Register</string>
    <string name="ins_reg">Inspection Register for Departmental Officers</string>
    <string name="visit_book">Visitors Register</string>
    <string name="previous">PREVIOUS</string>
    <string name="saveandnext">SAVE &amp; NEXT</string>
    <string name="next">NEXT</string>
    <string name="finish">Finish</string>
    <string name="entitlements_provided_to_students">All Entitlements provided to students</string>
    <string name="entitlements_cosmetics">Cosmetics distributed</string>
    <string name="entitlements_cosmetics_upto_month">Cosmetics distributed up to which month</string>
    <string name="entitlements_uniforms">Uniforms Provided are in good quality, properly stitched as per student size</string>
    <string name="entitlements_haircut">Whether Hair cutting has been completed (Boys)</string>
    <string name="entitlements_haircut_date">Populated the date of last haircut</string>
    <string name="menu_home">Dashboard</string>
    <string name="exit_menu">Exit</string>
    <string name="logout_menu">Logout</string>
    <string name="sl_no">Sl.No</string>
    <string name="plan_to_cure">Plan to cure</string>
    <string name="enter_stu_name">Enter student name</string>
    <string name="enter_disease">Enter disease</string>
    <string name="enter_student_class">Enter student class</string>
    <string name="winning_place_location">Winning place location</string>
    <string name="event">Event</string>
    <string name="level">Level</string>
    <string name="schemes">Schemes</string>
    <string name="report">Reports</string>
    <string name="gcc_reports_offline">GCC Offline Inspections</string>
    <string name="schools_reports_offline">Schools Offline Inspections</string>
    <string name="engineering_works">Engineering Works</string>
    <string name="institute_inspection">Institute Inspection</string>
    <string name="gcc_title">GCC</string>
    <string name="info">Info</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_info">App Info</string>
</resources>