<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            app:iconTint="@color/colorPrimaryDark"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_home" />
    </group>
    <group
        android:id="@+id/menu2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/schools_icon"
            android:title="@string/institute_inspection"
            app:iconTint="@color/colorPrimaryDark" />
        <item
            android:id="@+id/nav_schemes"
            android:icon="@drawable/schemes_icon"
            android:title="@string/schemes"
            app:iconTint="@color/colorPrimaryDark" />
        <item
            android:id="@+id/nav_gcc"
            android:icon="@drawable/gcc_icon"
            android:title="@string/gcc_title"
            app:iconTint="@color/colorPrimaryDark" />
        <item
            android:id="@+id/nav_eng"
            android:icon="@drawable/engineering_works_icon"
            android:title="@string/engineering_works"
            android:visible="false"
            app:iconTint="@color/colorPrimaryDark" />
    </group>
    <group
        android:id="@+id/menu3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            app:iconTint="@color/colorPrimaryDark"
            android:icon="@drawable/report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_my_insp_school"
            android:icon="@drawable/schools_icon"
            android:title="@string/schools_reports_offline"
            app:iconTint="@color/colorPrimaryDark" />
        <item
            android:id="@+id/nav_my_insp"
            android:icon="@drawable/gcc_icon"
            android:title="@string/gcc_reports_offline"
            app:iconTint="@color/colorPrimaryDark" />


    </group>

    <item
        android:id="@+id/menu_other"
        android:title="@string/info">
        <menu>
            <group
                android:id="@+id/pri_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/exit"
                    android:title="@string/exit_menu" />

                <item
                    app:iconTint="@color/colorPrimaryDark"
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/logout"
                    android:title="@string/logout_menu" />

                <item
                    android:id="@+id/nav_pri_pol"
                    android:icon="@drawable/privacy"
                    android:title="@string/privacy_policy" />

                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/info"
                    android:title="@string/app_info" />



            </group>
        </menu>
    </item>
</menu>