<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_gravity="center" />

            <com.example.twdinspection.custom.CustomFontTextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/verify_your_number"
                android:textStyle="bold" />

            <com.example.twdinspection.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/plz_enter_mob" />

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <com.example.twdinspection.custom.CustomFontEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.example.twdinspection.custom.CustomFontEditText
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_mobile_number" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.example.twdinspection.custom.CustomFontButtonView
                android:textColor="@color/white"
                android:text="@string/con"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/btn_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30dp"/>
        </LinearLayout>

    </RelativeLayout>

</layout>